--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "test:e2e:gui": ".\\node_modules\\.bin\\hermione gui",
         "test": "npm run test:unit && npm run test:e2e",
         "build": "webpack --mode=production --node-env=production",
-        "watch": "webpack --watch"
+        "watch": "webpack --watch",
+        "test:uit:chdevtools": "--inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
     },
     "dependencies": {
         "@bem-react/classname": "^1.5.12",
@@ -31,11 +32,13 @@
     },
     "devDependencies": {
         "@jest/globals": "^29.3.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/user-event": "^14.4.3",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.9",
         "@types/jest": "^29.2.4",
         "@types/mini-css-extract-plugin": "^2.3.0",
-        "@types/node": "^16.11.1",
+        "@types/node": "^16.18.38",
         "@types/react": "^17.0.30",
         "@types/react-dom": "^17.0.9",
         "@types/react-helmet": "^6.1.4",
@@ -55,9 +58,14 @@
         "style-loader": "^3.3.0",
         "ts-jest": "^29.0.3",
         "ts-loader": "^9.2.6",
-        "ts-node": "^10.3.0",
+        "ts-node": "^10.9.1",
+        "tslib": "^2.6.0",
         "typescript": "^4.4.4",
         "webpack": "^5.58.2",
         "webpack-cli": "^4.9.0"
+    },
+    "resolutions": {
+        "@types/react": "17.0.2",
+        "@types/react-dom": "17.0.2"
     }
 }
