--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,14 +7,16 @@
         "target": "es5",
         "allowJs": true,
         "jsx": "react",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+
     },
     "include": [
         "src"
     ],
     "ts-node": {
         "compilerOptions": {
-            "module": "CommonJS"
+            "module": "CommonJS",
+
         }
     }
 }
